#51 Refactor language code generator to use core module (#52)
* Remove `SubsetOptimiser` from the language generator and use the `SubsetBuilder` in the core module to decide what kind of subset to generate for the language alphabets.
* Renamed the `RangedSubsetUtils` to `SubsetUtils`
* Renamed the core subset builder classes
* Renamed the `InvalidDataTypeValueException` to `InvalidValueException`